www/www-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shpaq-org
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.frontend.redirect.permanent: 'true'
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: shpaq.org
    http:
      paths:
      - backend:
          serviceName: shpaq-org
          servicePort: 80
        path: /
  tls:
  - secretName: shpaq-org-tls
    hosts:
      - shpaq.org
